<resources>
    <string name="app_name">Popular Movies</string>
    <string name="title_rating">rating:</string>
    <string name="title_pop">popularity:</string>
    <string name="title_reld">release:</string>
    <string name="action_settings">Settings</string>
    <string name="action_bypop">Popular movies (by popularity, desc.)</string>
    <string name="action_byrat">Highest rated (by rating, desc.)</string>
    <string name="action_byplaying">Now playing (by rating, desc.)</string>
    <string name="action_byupcoming">Upcoming (by rating, desc.)</string>
    <string name="action_showoffl">Show offline content (from SQLite)</string>
    <string name="text_source">Source:</string>


    <string name="apikey">Please add your API Key here</string>
</resources>
